# ovirt-api-simulator

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  README.ru.md  docker-compose.release.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  config.py  lifespan.py  main.py
app/api/: errors.py  openapi.py
app/ovirt/: __init__.py  auth.py  common.py  contract_loader.py  demo_datacenter.py  deps.py  errors.py  ids.py  jobs.py  mount.py  opspec.py  registry.py  repr.py  schema_engine.py  seed.py  seed_cli.py  seed_nested.py  serialize.py  settings.py  versioning.py
app/security/: auth.py
app/web/: assets.py  index.html  ovirt_body_examples.py  ovirt_catalog.py  routes.py
contracts/: README.md  README.ru.md
contracts/ovirt/: index.json
docker/gateway/: ovirt-engine.conf
docs/: README.md  api-surface.md  api-versions.md  api_coverage.md  architecture.md  authentication.md  clients.md  configuration.md  faq.md  getting-started.md  kubernetes.md  observability.md  operations.md  ports.md  security.md  seed-profiles.md  testing.md  troubleshooting.md  web-ui.md
docs/domains/: README.md  datacenters-clusters.md  hosts.md  identity.md  jobs.md  networks.md  schema-collections.md  storage.md  vms.md
docs/examples/: ansible.md  overview.md  pulumi.md  python-requests.md  terraform.md  troubleshooting-clients.md
docs/ru/: README.md  api-surface.md  api-versions.md  api_coverage.md  architecture.md  authentication.md  clients.md  configuration.md  faq.md  getting-started.md  kubernetes.md  observability.md  operations.md  ports.md  security.md  seed-profiles.md  testing.md  (+2 more)
evidence/: ovirt-3.6.json  ovirt-4.3.json  ovirt-4.4.json  ovirt-4.5.json  ovirt-master.json
examples/: README.md  README.ru.md
pulumi-tests/: Makefile  README.md  README.ru.md  docker-compose.yml
tools/: audit_seed_dump.py
(+96 files in other folders)
